Second commit: single movie

--- a/views/movies/movies.hbs
+++ b/views/movies/movies.hbs
@@ -1,7 +1,8 @@
-<h1>Media Content</h1>
+<h1>Movies Content</h1>
 
-{{#each media}}
+{{#each movies}}
     <div>
+        <p>{{_id}}</p>
         <p>Type of media: {{type}}</p>
         <p>Title: {{title}}</p>
         <p>Year: {{year}}</p>
