--- a/views/movies/newMovieForm.hbs
+++ b/views/movies/newMovieForm.hbs
@@ -1,4 +1,4 @@
-<form method="POST" action="/media">
+<form method="POST" action="/movies">
 
   <input type="text" placeholder="Type of media" name="type" />
 
@@ -10,6 +10,6 @@
 
   <input type="text" placeholder="Review" name="review" />
 
-  <input type="submit" value="Create Media" />
+  <input type="submit" value="Create Movie" />
   
 </form>
