Third commit: update review

--- a/views/movies/movie.hbs
+++ b/views/movies/movie.hbs
@@ -7,3 +7,7 @@
     <p>Genre: {{movie.genre}}</p>
     <p>Review: {{movie.review}}</p>
 </div>
+
+<a href="/movies">Go back to All Movies</a>
+
+<a href="/movies/{{movie._id}}/edit">Edit movie post</a>
