--- a/views/movies/movies.hbs
+++ b/views/movies/movies.hbs
@@ -2,11 +2,13 @@
 
 {{#each movies}}
     <div>
-        <p>{{_id}}</p>
         <p>Type of media: {{type}}</p>
         <p>Title: {{title}}</p>
+        <p>Title:<a href="/movies/{{_id}}">Title: {{title}}</a></p>
         <p>Year: {{year}}</p>
         <p>Genre: {{genre}}</p>
         <p>Review: {{review}}</p>
     </div>
 {{/each}}
+
+<a href="/movies/new">Post new movie review</a>
