Fourth commit: delete review

--- a/views/movies/movie.hbs
+++ b/views/movies/movie.hbs
@@ -11,3 +11,7 @@
 <a href="/movies">Go back to All Movies</a>
 
 <a href="/movies/{{movie._id}}/edit">Edit movie post</a>
+
+<form action="/movies/{{movie._id}}?_method=DELETE" method="post">
+    <input type="submit" value="Delete Movie">
+</form>
