--- a/views/movies/movies.hbs
+++ b/views/movies/movies.hbs
@@ -4,7 +4,7 @@
     <div>
         <p>Type of media: {{type}}</p>
         <p>Title: {{title}}</p>
-        <p>Title:<a href="/movies/{{_id}}">Title: {{title}}</a></p>
+        <p>Title:<a href="/movies/{{_id}}"> {{title}}</a></p>
         <p>Year: {{year}}</p>
         <p>Genre: {{genre}}</p>
         <p>Review: {{review}}</p>
