Fifth commit: create CSS

--- a/views/movies/editMovieForm.hbs
+++ b/views/movies/editMovieForm.hbs
@@ -4,11 +4,11 @@
 
   <input type="text" placeholder="Title "name="title" value="{{movie.title}}" />
 
-  <input type="text" placeholder="Year" name="year" value="{{movie.year}}" />
-
-  <input type="text" placeholder="Genre" name="genre" value="{{movie.genre}}" />
+  <input type="text" placeholder="Rating" name="rating" value="{{movie.rating}}" />
 
   <input type="text" placeholder="Review" name="review" value="{{movie.review}}" />
+
+  <input type="text" name="imgLink" id="img-link" value="{{movie.imgLink}}"/>
 
   <input type="submit" value="Edit Movie Review" />
   
