--- a/views/movies/movie.hbs
+++ b/views/movies/movie.hbs
@@ -3,9 +3,9 @@
 <div>
     <p>Type of media: {{movie.type}}</p>
     <p>Title: {{movie.title}}</p>
-    <p>Year: {{movie.year}}</p>
-    <p>Genre: {{movie.genre}}</p>
+    <p>Rating: {{movie.rating}}</p>
     <p>Review: {{movie.review}}</p>
+    <img src="{{movie.imgLink}}" alt="Image of {{movie.title}}">
 </div>
 
 <a href="/movies">Go back to All Movies</a>
