--- a/views/movies/newMovieForm.hbs
+++ b/views/movies/newMovieForm.hbs
@@ -4,12 +4,12 @@
 
   <input type="text" placeholder="Title "name="title" />
 
-  <input type="text" placeholder="Year" name="year" />
-
-  <input type="text" placeholder="Genre" name="genre" />
+  <input type="text" placeholder="Rating" name="rating" />
 
   <input type="text" placeholder="Review" name="review" />
 
-  <input type="submit" value="Create Movie" />
+  <input type="text" name="imgLink" id="img-link"/>
+
+  <input type="submit" value="Create Movie Review" />
   
 </form>
