Sixth commit: CSS new review

--- a/views/movies/movies.hbs
+++ b/views/movies/movies.hbs
@@ -5,6 +5,7 @@
       <a class="nav-item nav-link" href="#">Movies</a>
       <a class="nav-item nav-link" href="#">Musics</a>
       <a class="nav-item nav-link" href="#">Books</a>
+      <a class="nav-item nav-link" href="/movies/new">Post New Review</a>
     </div>
   </div>
 </nav>
@@ -26,4 +27,3 @@
     </div>
 {{/each}}
 
-<a href="/movies/new">Post new movie review</a>
