--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,7 +8,7 @@ h1, h3 {
     font-weight: 900;
 }
 
-h1 {
+h1, h2 {
     margin: 30px auto;
     text-align: center;
     color: #505961;
@@ -28,11 +28,21 @@ h1 {
     float: left;
     margin-right: 20px;
     width: 20%;
-    height: 20%;
+    object-fit: cover;
 }
 
 .comment {
     margin-left: 15%;
+}
+
+.form-group {
+    width: 60%;
+    margin: 15px auto;
+}
+
+#submitBtn {
+    float: right;
+    margin-right: 20%;
 }
 
 
