--- a/views/movies/newMovieForm.hbs
+++ b/views/movies/newMovieForm.hbs
@@ -1,4 +1,31 @@
+<h2>Create New Movie Review</h2>
+
 <form method="POST" action="/movies">
+  <div class="form-group">
+    <label for="formGroupExampleInput">Type of media</label>
+    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Type of media" name="type" />
+  </div>
+  <div class="form-group">
+    <label for="formGroupExampleInput2">Title</label>
+    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Title "name="title" />
+  </div>
+  <div class="form-group">
+    <label for="formGroupExampleInput2">Rating</label>
+    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Rating" name="rating" />
+  </div>
+  <div class="form-group">
+    <label for="formGroupExampleInput2">Review</label>
+    <textarea type="text" class="form-control" id="formGroupExampleInput2" placeholder="Review" name="review"></textarea>
+  </div>
+  <div class="form-group">
+    <label for="formGroupExampleInput2">Image Link</label>
+    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Image Link" name="imgLink" id="img-link"/>
+  </div>
+  <input id="submitBtn" type="submit" value="Create Movie Review" />
+  
+</form>
+
+{{!-- <form method="POST" action="/movies">
 
   <input type="text" placeholder="Type of media" name="type" />
 
@@ -12,4 +39,4 @@
 
   <input type="submit" value="Create Movie Review" />
   
-</form>
+</form> --}}
