--- a/views/movies/editMovieForm.hbs
+++ b/views/movies/editMovieForm.hbs
@@ -1,4 +1,42 @@
-<form method="POST" action="/movies/{{movie._id}}?_method=PUT"">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link active" href="/movies">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" href="#">Movies</a>
+      <a class="nav-item nav-link" href="#">Musics</a>
+      <a class="nav-item nav-link" href="#">Books</a>
+      <a class="nav-item nav-link" href="/movies/new">Post New Review</a>
+    </div>
+  </div>
+</nav>
+
+<h2>Create New Movie Review</h2>
+
+<form method="POST" method="POST" action="/movies/{{movie._id}}?_method=PUT">
+  <div class="form-group">
+    <label for="formGroupExampleInput">Type of media</label>
+    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Type of media" name="type" value="{{movie.type}}" />
+  </div>
+  <div class="form-group">
+    <label for="formGroupExampleInput2">Title</label>
+    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Title "name="title" value="{{movie.title}}" />
+  </div>
+  <div class="form-group">
+    <label for="formGroupExampleInput2">Rating</label>
+    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Rating" name="rating" value="{{movie.rating}}" />
+  </div>
+  <div class="form-group">
+    <label for="formGroupExampleInput2">Review</label>
+    <textarea type="text" class="form-control" id="formGroupExampleInput2" placeholder="Review" name="review" value="{{movie.review}}"></textarea>
+  </div>
+  <div class="form-group">
+    <label for="formGroupExampleInput2">Image Link</label>
+    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Image Link" name="imgLink" id="img-link" value="{{movie.imgLink}}"/>
+  </div>
+  <input id="submitBtn" type="submit" value="Create Movie Review" />
+</form>
+
+{{!-- <form method="POST" action="/movies/{{movie._id}}?_method=PUT"">
 
   <input type="text" placeholder="Type of media" name="type" value="{{movie.type}}" />
 
@@ -12,5 +50,5 @@
 
   <input type="submit" value="Edit Movie Review" />
   
-</form>
+</form> --}}
 
