11st commit: update and delete user

--- a/views/movies/editMovieForm.hbs
+++ b/views/movies/editMovieForm.hbs
@@ -12,7 +12,7 @@
 
 <h2>Create New Movie Review</h2>
 
-<form method="POST" method="POST" action="/movies/{{movie._id}}?_method=PUT">
+<form method="POST" action="/movies/{{movie._id}}?_method=PUT">
   <div class="form-group">
     <label for="formGroupExampleInput">Type of media</label>
     <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Type of media" name="type" value="{{movie.type}}" />
