--- a/views/users/user.hbs
+++ b/views/users/user.hbs
@@ -5,6 +5,7 @@
       <a class="nav-item nav-link" href="#">Movies</a>
       <a class="nav-item nav-link" href="#">Musics</a>
       <a class="nav-item nav-link" href="#">Books</a>
+      <a class="nav-item nav-link" href="/movies/new">Post New Review</a>
       <a class="nav-item nav-link" href="/users/new">Create New Account</a>
     </div>
   </div>
@@ -19,3 +20,7 @@
 </div>
 
 <a href="/users/{{user._id}}/edit">Edit User Post</a>
+
+<form action="/users/{{user._id}}?_method=DELETE" method="post">
+    <input type="submit" value="Delete User">
+</form>
