--- a/views/users/users.hbs
+++ b/views/users/users.hbs
@@ -5,7 +5,8 @@
       <a class="nav-item nav-link" href="#">Movies</a>
       <a class="nav-item nav-link" href="#">Musics</a>
       <a class="nav-item nav-link" href="#">Books</a>
-      <a class="nav-item nav-link" href="/users/new">Post New Review</a>
+      <a class="nav-item nav-link" href="/movies/new">Post New Review</a>
+      <a class="nav-item nav-link" href="/users/new">Create New Account</a>
     </div>
   </div>
 </nav>
