--- a/views/users/editUserForm.hbs
+++ b/views/users/editUserForm.hbs
@@ -1,9 +1,7 @@
-{{!-- <h2>New User Account</h2> --}}
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="/movies">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link active" href="/users">Home <span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href="#">Movies</a>
       <a class="nav-item nav-link" href="#">Musics</a>
       <a class="nav-item nav-link" href="#">Books</a>
@@ -13,21 +11,21 @@
   </div>
 </nav>
 
-<h2>New User Account</h2>
+<h2>Edit User Post</h2>
 
-<form method="POST" action="/users">
+<form method="POST" action="/users/{{user._id}}?_method=PUT">
   <div class="form-group">
     <label for="formGroupExampleInput">User Name:</label>
-    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="User Name" name="userName" />
+    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="User Name" name="userName" value="{{user.userName}}" />
   </div>
   <div class="form-group">
     <label for="formGroupExampleInput2">First Name:</label>
-    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="First Name"name="firstName" />
+    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="First Name"name="firstName" value="{{user.firstName}}" />
   </div>
   <div class="form-group">
     <label for="formGroupExampleInput2">Last Name:</label>
-    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Last Name" name="lastName" />
+    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Last Name" name="lastName" value="{{user.lastName}}"/>
   </div>
   
-  <input id="submitBtn" type="submit" value="Create New Account" />
+  <input id="submitBtn" type="submit" value="Edit Account" />
 </form>
