--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,7 +14,7 @@ h1, h2 {
     color: #505961;
 }
 
-.movie {
+.movie, .media {
     display: flex;
     justify-content: flex-start;
     flex-direction: row;
@@ -24,7 +24,7 @@ h1, h2 {
     margin: 15px auto;
 }
 
-.movie img {
+.movie img, .media img {
     float: left;
     margin-right: 20px;
     width: 20%;
