--- a/views/users/users.hbs
+++ b/views/users/users.hbs
@@ -4,7 +4,7 @@
 
 {{#each users}}
         <div class"content">
-            <p>Username:<a href="/users/{{_id}}"> {{userName}}</a></p>
+            <p>Username:<a href="/users/{{_id}}/media/"> {{userName}}</a></p>
             <p>First Name: {{firstName}}</p>
             <p>Last Name: {{lastName}}</p>
             <p>Account created at: {{createdDate}}</p>
