--- a/views/media/media.hbs
+++ b/views/media/media.hbs
@@ -1,4 +1,16 @@
-
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link active" href="/users">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" href="#">Movies</a>
+      <a class="nav-item nav-link" href="#">Musics</a>
+      <a class="nav-item nav-link" href="#">Books</a>
+      <a class="nav-item nav-link" href="/users">User Page</a>
+      <a class="nav-item nav-link" href="/users/{{userId}}/media/new">Post New Review</a>
+      <a class="nav-item nav-link" href="/users/new">Create New Account</a>
+    </div>
+  </div>
+</nav>
 
 <h1>Media Reviews</h1>
 
