--- a/views/media/singleMedia.hbs
+++ b/views/media/singleMedia.hbs
@@ -22,6 +22,6 @@
 
 <a href="/users/{{user._id}}/media/{{media._id}}/edit">Edit media post</a>
 
-<form action="/media/{{media._id}}?_method=DELETE" method="post">
+<form action="/users/{{user._id}}/media/{{media._id}}?_method=DELETE" method="post">
     <input type="submit" value="Delete Media">
 </form>
