20th commit: access coment form

--- a/views/media/media.hbs
+++ b/views/media/media.hbs
@@ -24,7 +24,7 @@
             <p>Review: {{review}}</p>
         </div>
     </div>
-    <div class="comment">
+    {{!-- <div class="comment">
         <button>Comments</button>
-    </div>
+    </div> --}}
 {{/each}}
