21st commit: See all comments

--- a/views/comments/newCommentForm.hbs
+++ b/views/comments/newCommentForm.hbs
@@ -1,4 +1,4 @@
-<form method="POST" action="/comments">
+<form method="POST" action="/media/{{media._id}}/comments">
   <div class="form-group">
     <label for="formGroupExampleInput">Comments</label>
     <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Comments" name="comment" />
