--- a/views/comments/comments.hbs
+++ b/views/comments/comments.hbs
@@ -1,9 +1,24 @@
+<div class="media">
+    <img class="img" src="{{imgLink}}" alt="Image of {{title}}">
+    <div class"content">
+        <h3>Title: {{media.title}}</h3>
+        <p>Type: {{media.type}}</p>
+        <p>Rating: {{media.rating}}</p>
+        <p>Review: {{media.review}}</p>
+    </div>
+</div>
 
 
 {{#each comments}}
         <div class"content">
-            <p><a href="/comments/{{_id}}">Comment:</a>{{comment}}</p>
+            <p>Comment: {{comment}}</p>
         </div>
+        <div class="comment">
+        <button><a href="/media/{{media._id}}/comments/{{comment._id}}">Reply</a></button>
+        </div>
+
 {{/each}}
 
-<a href="/comments/new">Create New Comment</a>
+<div class="comment">
+        <button><a href="/media/{{media._id}}/comments/new">Post A Comment</a></button>
+    </div>
