--- a/views/comments/comments.hbs
+++ b/views/comments/comments.hbs
@@ -14,7 +14,7 @@
             <p>Comment: {{comment}}</p>
         </div>
         <div class="comment">
-        <button><a href="/media/{{media._id}}/comments/{{comment._id}}">Reply</a></button>
+            <button><a href="/media/{{mediaId}}/comments/{{_id}}">Reply</a></button>
         </div>
 
 {{/each}}
