--- a/views/comments/editCommentForm.hbs
+++ b/views/comments/editCommentForm.hbs
@@ -1,4 +1,4 @@
-<form method="POST" action="/comments/{{comment._id}}?_method=PUT">
+<form method="POST" action="/media/{{media._id}}/comments/{{comment._id}}?_method=PUT">
   <div class="form-group">
     <label for="formGroupExampleInput">Comments</label>
     <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Comments" name="comment" value="{{comment.comment}}" />
