--- a/views/media/movies.hbs
+++ b/views/media/movies.hbs
@@ -2,8 +2,8 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link active" href="/media">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="/users/{{user._id}}/media/movies">Movies</a>
-      <a class="nav-item nav-link" href="/users/{{user._id}}/media/musics">Musics</a>
+      <a class="nav-item nav-link" href="users/{{user._id}}/media/movies">Movies</a>
+      <a class="nav-item nav-link" href="#">Musics</a>
       <a class="nav-item nav-link" href="#">Books</a>
       <a class="nav-item nav-link" href="/users">User Page</a>
       <a class="nav-item nav-link" href="/users/{{user._id}}/media/new">Post New Review</a>
