--- a/views/media/home.hbs
+++ b/views/media/home.hbs
@@ -2,10 +2,11 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link active" href="/media">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="/movies">Movies</a>
-      <a class="nav-item nav-link" href="#">Musics</a>
-      <a class="nav-item nav-link" href="#">Books</a>
+      <a class="nav-item nav-link" href="/users/{{user._id}}/media/movies">Movies</a>
+      <a class="nav-item nav-link" href="/users/{{user._id}}/media/musics">Musics</a>
+      <a class="nav-item nav-link" href="/users/{{user._id}}/media/books">Books</a>
       <a class="nav-item nav-link" href="/users">User Page</a>
+      <a class="nav-item nav-link" href="/users/{{user._id}}/media/new">Post New Review</a>
       <a class="nav-item nav-link" href="/users/new">Create New Account</a>
     </div>
   </div>
