27th commit: separate landing handlebar page

--- a/views/users/users.hbs
+++ b/views/users/users.hbs
@@ -9,13 +9,6 @@
 
 <h1>All Users Accounts</h1>
 
-        {{!-- <div class"content">
-            <p>Username:<a href="/users/{{_id}}/media/"> {{userName}}</a></p>
-            <p>First Name: {{firstName}}</p>
-            <p>Last Name: {{lastName}}</p>
-            <p>Account created at: {{createdDate}}</p>
-        </div> --}}
-
 <table class="table table-hover">
   <thead>
     <tr>
@@ -29,7 +22,7 @@
 {{#each users}}
   <tbody>
     <tr>
-      <th scope="row">{{userName}}</th>
+      <th scope="row" id="userName">{{userName}}</th>
       <td>{{firstName}}</td>
       <td>{{lastName}}</td>
       <td>{{createdDate}}</td>
