--- a/views/media/allMedia.hbs
+++ b/views/media/allMedia.hbs
@@ -2,16 +2,13 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link active" href="/media">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="/users/{{user._id}}/media/movies">Movies</a>
-      <a class="nav-item nav-link" href="/users/{{user._id}}/media/musics">Musics</a>
-      <a class="nav-item nav-link" href="/users/{{user._id}}/media/books">Books</a>
       <a class="nav-item nav-link" href="/users">User Page</a>
       <a class="nav-item nav-link" href="/users/new">Create New Account</a>
     </div>
   </div>
 </nav>
 
-<h1>All Posted Of {{user.userName}}</h1>
+<h1>Recent Posted</h1>
 
 {{#each media}}
     <div class="media">
