28th commit: style all posted by each user

--- a/views/media/media.hbs
+++ b/views/media/media.hbs
@@ -20,6 +20,7 @@
             <h3>Title: {{title}}</h3>
             <p>Type: {{type}}</p>
             <p>Rating: {{rating}}</p>
+            <p>Posted at: {{postedAt}}</p>
             <button><a href="/users/{{userId}}/media/{{_id}}">Read Review</a></button>
         </div>
     </div>
