29th commit: Styling singleMedia post

--- a/views/media/allMedia.hbs
+++ b/views/media/allMedia.hbs
@@ -17,6 +17,7 @@
             <h3>Title: {{title}}</h3>
             <p>Type: {{type}}</p>
             <p>Rating: {{rating}}</p>
+            <p>Posted {{posted}}</p>
             <button><a href="/users/{{userId}}/media/{{_id}}">Read Review</a></button>
         </div>
     </div>
