--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -27,7 +27,7 @@ h1, h2 {
 .movie img, .media img {
     float: left;
     margin-right: 20px;
-    width: 20%;
+    width: 29%;
     object-fit: cover;
 }
 
@@ -57,5 +57,28 @@ h1, h2 {
 .createDate {
     width: 300px;
 }
+
+.reviewBtn {
+    float: right;
+    /* margin-right: 15%; */
+}
+
+.container {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    background-color: #fff;
+    width: 70%;
+    height: 100%;
+    /* margin: 15px auto; */
+}
+
+.title, img {
+    width: 100%;
+    object-fit: cover;
+    height: 350px;
+}
+
+
 
 
