--- a/views/media/media.hbs
+++ b/views/media/media.hbs
@@ -20,8 +20,8 @@
             <h3>Title: {{title}}</h3>
             <p>Type: {{type}}</p>
             <p>Rating: {{rating}}</p>
-            <p>Posted at: {{postedAt}}</p>
-            <button><a href="/users/{{userId}}/media/{{_id}}">Read Review</a></button>
+            <p>Posted {{posted}}</p>
+            <button class="reviewBtn"><a href="/users/{{userId}}/media/{{_id}}">Read Review</a></button>
         </div>
     </div>
 {{/each}}
