--- a/views/media/newMediaForm.hbs
+++ b/views/media/newMediaForm.hbs
@@ -13,7 +13,7 @@
   </div>
   <div class="form-group">
     <label for="formGroupExampleInput2">Rating</label>
-    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Rating" name="rating" />
+    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="From 1 to 5" name="rating" />
   </div>
   <div class="form-group">
     <label for="formGroupExampleInput2">Review</label>
