--- a/views/media/media.hbs
+++ b/views/media/media.hbs
@@ -17,17 +17,25 @@
     <div class="media">
         <img class="img" src="{{imgLink}}" alt="Image of {{title}}">
         <div class"content">
-            <h3>Title: {{title}}</h3>
-            <p>Type: {{type}}</p>
-            <p>Rating: {{rating}}/5</p>
-            <p>Posted {{posted}}</p>
-            <button class="reviewBtn"><a href="/users/{{userId}}/media/{{_id}}">Read Review</a></button>
+          <h3>Title: {{title}}</h3>
+          <p>Type: {{type}}</p>
+          <p>Rating: {{rating}}/5</p>
+          <p>Posted {{posted}}</p>
+            <div class="allMediaBtn">
+              <div class="Btn1">
+                <button><a href="/users/{{userId}}/media/{{_id}}">Read Review</a></button>
+                <button type="button"><a href="/users/{{userId}}/media/{{_id}}/edit">Edit media post</a></button>
+              </div>
+              <div class="Btn-2">
+                <form action="/users/{{user._id}}/media/{{media._id}}?_method=DELETE" method="post">
+                  <input type="submit" value="Delete Media">
+                </form>
+              </div>
+            </div>
         </div>
     </div>
-    <a href="/users/{{user._id}}/media/{{media._id}}/edit">Edit media post</a>
-
-<form action="/users/{{user._id}}/media/{{media._id}}?_method=DELETE" method="post">
-    <input type="submit" value="Delete Media">
-</form>
+  
+      
+    
 {{/each}}
 
