32nd commit: Completed styling allusers posted

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -27,7 +27,8 @@ h1, h2 {
 .movie img, .media img {
     float: left;
     margin-right: 20px;
-    width: 29%;
+    max-width: 29%;
+    max-height: 100%;
     object-fit: cover;
 }
 
