--- a/views/media/newMediaForm.hbs
+++ b/views/media/newMediaForm.hbs
@@ -4,8 +4,19 @@
 
 <form method="POST" action="/users/{{user._id}}/media">
   <div class="form-group">
-    <label for="formGroupExampleInput">Type of media</label>
-    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Type of media" name="type" />
+    {{!-- <label for="formGroupExampleInput">Type of media</label>
+    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Type of media"  /> --}}
+    <div class="input-group mb-3">
+    <div class="input-group-prepend">
+      <label class="input-group-text" for="inputGroupSelect01">Media Type</label>
+    </div>
+    <select class="custom-select" id="inputGroupSelect01" name="type">
+      <option selected>Choose...</option>
+      <option value="Movie">Movie</option>
+      <option value="Music">Music</option>
+      <option value="Book">Book</option>
+    </select>
+  </div>
   </div>
   <div class="form-group">
     <label for="formGroupExampleInput2">Title</label>
@@ -17,7 +28,7 @@
   </div>
   <div class="form-group">
     <label for="formGroupExampleInput2">Review</label>
-    <textarea type="text" class="form-control" id="formGroupExampleInput2" placeholder="Review" name="review"></textarea>
+    <textarea type="text" class="form-control" id="formGroupExampleInput2" placeholder="Review" name="review" rows="8"></textarea>
   </div>
   <div class="form-group">
     <label for="formGroupExampleInput2">Image Link</label>
