--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -100,8 +100,8 @@ h1, h2 {
 
 .title, img {
     width: 100%;
+    height: 400px;
     object-fit: cover;
-    /* height: 400px; */
 }
 .wrapper {
     display: flex;
