--- a/views/comments/comments.hbs
+++ b/views/comments/comments.hbs
@@ -21,19 +21,32 @@
     </div>
 </div>
 
-    {{#each comments}}
-        <div class="commentsBox">    
-            <div class="userPost">
-                <p>Posted By Anonymous User</p>
-                <p>{{posted}}</p>
-            </div>
-            <div class="comment">
-                <p>{{comment}}</p>
-                <a href="/media/{{mediaId}}/comments/{{_id}}">Reply</a>
-            </div>
+<form method="POST" action="/media/{{media._id}}/comments">
+    <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="Comments..." name="comment" aria-label="Recipient's username" aria-describedby="button-addon2">
+        <div class="input-group-append">
+            <button class="btn btn-outline-secondary" id="submitBtn" type="submit">Post a comment</button>
         </div>
-    {{/each}}
+    </div>
+</form>
 
-<div class="postCommentBtn">
-    <button><a href="/media/{{media._id}}/comments/new">Post A Comment</a></button>
-</div>
+{{#each comments}}
+    <div class="commentsBox">    
+        <div class="userPost">
+            <p>Posted By Anonymous User</p>
+            <p>{{posted}}</p>
+        </div>
+        <div class="comment">
+            <p>{{comment}}</p>
+            <a href="/media/{{mediaId}}/comments/{{_id}}">Reply</a>
+            <a id="editComment" href="/media/{{mediaId}}/comments/{{_id}}/edit">Edit Comment</a>
+        </div>
+    </div>
+    
+        <form  action="/media/{{mediaId}}/comments/{{_id}}?_method=DELETE" method="post">
+            <input id="deleteComment" type="submit" value="Delete Comment">
+        </form>
+    
+{{/each}}
+
+
