--- a/views/comments/comments.hbs
+++ b/views/comments/comments.hbs
@@ -22,7 +22,7 @@
 </div>
 
 <form method="POST" action="/media/{{media._id}}/comments">
-    <div class="input-group mb-3">
+    <div id="input" class="input-group mb-3">
         <input type="text" class="form-control" placeholder="Comments..." name="comment" aria-label="Recipient's username" aria-describedby="button-addon2">
         <div class="input-group-append">
             <button class="btn btn-outline-secondary" id="submitBtn" type="submit">Post a comment</button>
