--- a/views/media/newMediaForm.hbs
+++ b/views/media/newMediaForm.hbs
@@ -7,32 +7,40 @@
     {{!-- <label for="formGroupExampleInput">Type of media</label>
     <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Type of media"  /> --}}
     <div class="input-group mb-3">
-    <div class="input-group-prepend">
-      <label class="input-group-text" for="inputGroupSelect01">Media Type</label>
+      <div class="input-group-prepend">
+        <label class="input-group-text" for="inputGroupSelect01">Media Type</label>
+      </div>
+      <select class="custom-select" id="inputGroupSelect01" name="type">
+        <option selected>Choose...</option>
+        <option value="Movie">Movie</option>
+        <option value="Music">Music</option>
+        <option value="Book">Book</option>
+      </select>
     </div>
-    <select class="custom-select" id="inputGroupSelect01" name="type">
-      <option selected>Choose...</option>
-      <option value="Movie">Movie</option>
-      <option value="Music">Music</option>
-      <option value="Book">Book</option>
-    </select>
-  </div>
   </div>
   <div class="form-group">
     <label for="formGroupExampleInput2">Title</label>
     <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Title "name="title" />
   </div>
+
   <div class="form-group">
     <label for="formGroupExampleInput2">Rating</label>
     <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="From 1 to 5" name="rating" />
   </div>
+
   <div class="form-group">
     <label for="formGroupExampleInput2">Review</label>
     <textarea type="text" class="form-control" id="formGroupExampleInput2" placeholder="Review" name="review" rows="8"></textarea>
   </div>
+
   <div class="form-group">
     <label for="formGroupExampleInput2">Image Link</label>
     <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Image Link" name="imgLink" id="img-link"/>
+  </div>
+
+  <div class="form-group">
+    <label for="formGroupExampleInput2">Video Link</label>
+    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Embed Link" name="videoLink" id="video-link"/>
   </div>
  
   <input id="submitBtn" type="submit" value="Create Review" />
